fix timeline inline alignment

--- a/src/extensions/mg-timeline.scss
+++ b/src/extensions/mg-timeline.scss
@@ -104,4 +104,5 @@
 }
 .mg-timeline-inline > ul li:last-of-type {
   border-top: 0.3rem solid transparent;
+  flex-grow: 0;
 }
